# obs-projector

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  buildspec.json
.github/actions/build-plugin/: action.yaml
.github/scripts/: .Aptfile  .Brewfile  .Brewfile-multi  build-macos
.github/scripts/utils.zsh/: check_macos  setup_ubuntu
build-aux/: compile-shaders.sh
cmake/common/: compiler_common.cmake
cmake/linux/: compilerconfig.cmake
src/: plugin-main.c  plugin-main.m
src/projector/: clock.c  clock.h  config-debug.c  config-debug.h  config-parse.c  config-parse.h  config-serialize.c  config-serialize.h  config-structs.h  config.c  config.h  debug.h  loop.c  loop.h  monitor.c  monitor.h  ogl-loader.c  ogl-loader.h  render-obs.c  render-obs.h  render-pixel-unpack-buffer.c  render-pixel-unpack-buffer.h  render.c  render.h  vs-color-corrector.h
